Soort van beetje style ig

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,10 +11,103 @@
 /* Header */
 header{
     background-color: var(--Yellow);
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
     
 }
 header ul{
     list-style-type: none;
+    display: flex;
+    align-items: center;
+    max-width: 390px;
+    display: none;
+    
+}
+
+ul li{
+    margin-top: 25px;
+}
+
+ul li a{
+    color: white;
+    padding: 12px;
+    border-radius: 20px;
+}
+
+ul li a:hover{
+    background-color: #654202;
+}
+
+
+.home, .login{
+    
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    margin-top: 25px;
+    max-width: 150px;
+    border-radius: 20px;
+    padding: 12px;
+}
+.home{
+   /* margin-left: 200px; */
+}
+
+.login{
+    margin-right: 100px;
+}
+
+.home:hover, .login:hover{
+    background-color: #654202;
+}
+
+/* End header */
+
+/* Dropdown */
+.dropbtn {
+    background-color: #654202;
+    color: white;
+    padding: 16px;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 12px;
+    margin-right: 20px;
+    border-radius: 10%;
+    
+  }
+  
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #9e6a04;
+  }
+  
+
+  
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #f1f1f1; 
+    min-width: 100px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+.dropdown a:hover {
+    background-color: #ddd;
+}
+  
+.show {
+    display: block;
 }
 
 
@@ -25,10 +118,22 @@ body{
     
 }
 
+.logo{
+    max-width: 8rem;
+    margin-left: 20px;
+}
 
-img{
-    max-width: 390px;
-    
+.carousel{
+    max-width: 100%;
+}
+
+.huis-prijs{
+    float: right;
+    margin-right: 50px;
+}
+
+.adres{
+    margin-left: 30px;
 }
 
 /* Readmore */
@@ -49,18 +154,42 @@ img{
     margin: 10px;
 }
 
-button{
+/* Contact button */
+.contact-nu{
+    display: flex;
+    float: right;
+    padding: 20px;
+    background-color: #654202;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    color: white;
+
+}
+.contact-button, #myBtn {
     background-color: var(--Yellow);
     color: var(--white);
     border: var(--Yellow);
-    padding: 8px;
-    font-size: 18px;
+    padding: 14px;
+    font-size: 16px;
+    border-radius: 20px;
+    text-decoration: none;
+    text-align: center;
 }
+.contact-button{
+    margin-left: 20px;
+}
+/* Einde contact button */
 
+
+/* omschijving  */
+.omschrijving{
+    margin-top: 100px;
+    
+}
 
 /* Media */
 @media (min-width: 400px){
-    img{
+    .carousel{
         
         max-width: 700px;
         margin: 20px;
@@ -68,8 +197,26 @@ button{
     }
 }
 
+@media (min-width: 550px){
+    header ul{
+        display: contents;
+        text-decoration: none;
+    }
+    ul li a{
+        text-decoration: none;
+    }
+    .dropbtn{
+        display: none;
+    }
+    .logo{
+        margin-left: 50px;
+    }
+}
+
+
+
 @media (min-width: 760px){
-    img{
+    .carousel{
         display: block;
         max-width: 700px;
         margin-left: auto;
@@ -77,3 +224,32 @@ button{
         width: 92%;
     }
 }
+@media (min-width: 880px){
+        .carousel{
+            display: block;
+            margin-top: 50px;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
+            width: 92%;
+        }
+        .logo{
+            margin-left: 150px;
+        }
+    
+}
+
+/* @media (min-width: 1000px){
+    .carousel{
+        display: block;
+        margin-top: 50px;
+        max-width: 700px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 92%;
+    }
+    .logo{
+        margin-left: 150px;
+    }
+
+} */
